fix: mobile version image text visibility

--- a/app/gallery/GalleryPage.module.css
+++ b/app/gallery/GalleryPage.module.css
@@ -151,6 +151,7 @@
     background-origin: border-box;
     background-clip: border-box;
     -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+    mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
     -webkit-mask-composite: destination-out;
     mask-composite: exclude;
     background-size: 250% 250%, 100% 100%;
