--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -1,7 +1,8 @@
 .hero {
   position: relative;
   height: 100vh;
-  min-height: 700px;
+  height: 100svh;
+  min-height: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
